--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+html,body{
+font-family: 'Lato';
+
+}
+.wrapper {
+  padding: 50px;
+}
+.main{  
+  max-width: 1200px;
+
+  display: block;
+}
+.card {
+   
+    /* max-width: 1200px; */
+    /* float: left;
+    overflow: hidden;
+    width: 50%; 
+    gap: 10px;
+    font-family: 'Lato';
+    padding-top: 30px; */
+     width:500px;
+    height:500px;
+    overflow: hidden;
+    float:left;
+    display:inline;
+    margin:10px 0px 0px 10px;
+    background-color:white; 
+    gap :20px
+
+ 
+    
+}
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 10px 5px 0 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+}
+.dot1{
+ 
+  
+  height: 15px;
+  width: 15px;
+  margin: 10px 0 0 0;
+  border-radius:50% ;
+  background-color:brown;
+  display: inline-block;
+  
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-body {
+  padding: 2px 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+.card_image {
+  width: 100%;
+  height: 175px;
+  object-fit: cover;
+  display: inline-block;
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-body {
+  line-height: 1.5;
+  font-size: 0.9em;
+  padding: 15px;
+  background: #fafafa;
+  
+}
+
+
+
+.card_bottomleft {
+  padding: 10px 10px 10px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  align-items: left;
+  display: inline-block;
+  font-family: 'Lato';
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.card_bottomright  {
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: right;
+  display: inline-block;  
+  font-family: 'Lato';
+  position: absolute;
+  right: 35px;
+ 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
+
+
+
